Name:           cca
Version:        0.0.1
Build-Type:     Simple
License:        MIT
Cabal-version:  >= 1.8
Author:         Jeremy Yallop <yallop@gmail.com>, Paul H Liu <paul@thev.net>

library
  build-depends:   base, transformers, ghc, ghc-prim, containers, vector
  exposed-modules: Control.CCA.Types, Control.CCA.Instances 
  ghc-options:     -O2 -funfolding-use-threshold=512 
  Hs-Source-Dirs:  src

Executable play
  build-depends:  cca, base, template-haskell, HCodecs, array, mersenne-random-pure64, vector
  Main-is:        Play.hs
  other-modules:  SigFun Sound SoundAux
  ghc-options:    -O2 -funfolding-use-threshold=512 
  Hs-Source-Dirs: test

Executable test
  build-depends:  criterion, cca, base, template-haskell, mersenne-random-pure64, vector
  Main-is:        Main.hs
  other-modules:  Sample SigFun Sound SoundAux
  ghc-options:    -O2 -funfolding-use-threshold=512
  Hs-Source-Dirs: test
